# Called-It

./: .env.example  .gitignore  LICENSE  README.md  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
anchor/: Anchor.toml  README.md
anchor/programs/called_it_pool/: Cargo.toml
anchor/programs/called_it_pool/src/: lib.rs
data/: sample-match.jsonl
data/replays/: 18213979.jsonl  18218149.jsonl  18222446.jsonl  18237038.jsonl  18241006.jsonl  18257865.jsonl  index.json
docs/: ui-contract.md  ui-notes.md
scripts/: escrow-devnet.ts  mobile.mjs  pull-replays.ts  repro-lockin.ts  repro-simulate.ts  seed.ts  txline-activate.ts
src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
src/components/: Countdown.tsx  DevBar.tsx  DribbleLoader.tsx  EventFlash.tsx  FullTimeScreen.tsx  Leaderboard.tsx  LiveScreen.tsx  MascotAvatar.tsx  MomentRing.tsx  MotionRoot.tsx  NotificationHost.tsx  PredictScreen.tsx  Referee.tsx  SettingsMenu.tsx  SoundToggle.tsx  StakeRoller.tsx  SwipeDeck.tsx  WaitingScreen.tsx  WalletPanel.tsx
src/hooks/: useMatchNotifications.ts  useProfile.ts  useRoomBundle.ts  useSoundCues.ts
src/lib/: api.ts  forfeits.ts  live.ts  mascots.ts  match-reducer.ts  match.ts  money.ts  realtime.ts  supabase-browser.ts  types.ts
src/server/: env.ts  fixtures.ts  http.ts  rooms.ts
supabase/: config.toml
supabase/migrations/: 20260101000000_init.sql  20260201000000_fixture_kind.sql  (+1 more)
test/: helpers.ts  history.test.ts  match.test.ts  money.test.ts  payout.test.ts  pool.test.ts  replay.test.ts  rooms.test.ts  scoring.test.ts
(+44 files in other folders)
